# Tetris2

./: CMakeLists.txt  ChangeLog.md  README.md  deploy-linux.sh  deploy-win.sh
docs/: cc-linux.md  cc-osx.md  cc-windows.md
include/: Config.h  Device.h  Exceptions.h  Game.h  Piece.h  Player.h  Types.h
src/: Game.cpp  Piece.cpp  Player.cpp  main.cpp
